<resources>
    <string name="app_name">Yeemos</string>
    <string name="fb_appId">506250763228291</string>
    <string name="notification_channel_id">yeemos_notification_channel_id_1</string>
    <string name="OK">OK</string>
    <string name="fragment_editprofile_title">EDIT PROFILE</string>
    <string name="fragment_editprofile_name">Name</string>
    <string name="fragment_editprofile_username">Username</string>
    <string name="fragment_editprofile_website">Website</string>
    <string name="fragment_editprofile_bio">Bio</string>
    <string name="fragment_editprofile_privateinfo">PRIVATE INFORMATION</string>
    <string name="fragment_editprofile_email">Email</string>
    <string name="fragment_editprofile_phone">Phone</string>
    <string name="fragment_editprofile_sex">Sex</string>
    <string name="Search_title">SEARCH</string>
    <string name="fragment_findfrds_Title">FIND FRIENDS</string>
    <string name="More_popup_Share">Share</string>
    <string name="More_popup_Report">Report as Inappropriate</string>
    <string name="More_popup_FirstBtnTitle">Delete</string>
    <string name="More_popup_SecondBtnTitle">Edit</string>
    <string name="More_popup_ShareToFB">Share to Facebook</string>
    <string name="More_popup_UnFollow">UnFollow</string>
    <string name="More_popup_ReSend">Try again</string>
    <string name="nwedtgrp_ttl_newgroup">New Group</string>
    <string name="actvty_txt_someonementionyou">Someone has mentioned you.</string>
    <string name="rst_psswrd_usngFB_txt_passwordsnotmatch">Passwords do not match.</string>
    <string name="chng_psswrd_txt_newpassword">New Password</string>
    <string name="chtlstandcntcts_txt_received">Received - </string>
    <string name="cmmnt_txt_nocomment">No comment yet, be the first one to comment</string>
    <string name="pub_txt_backendversion">1.1.5</string>
    <string name="usrprfl_btn_notificationoff">Notification off</string>
    <string name="drwngcmmnt_btn_submit">Submit</string>
    <string name="sgn_up_txt_email">Email Address</string>
    <string name="edtpst_btn_strangeronly">Stranger Only</string>
    <string name="pf_txt_newpostanonymous">Someone just had a new post</string>
    <string name="rst_psswrd_eandu_ttl_resetpassword">Reset Password</string>
    <string name="fllwd_ttl_followed">Followed</string>
    <string name="chtlstandcntcts_txt_sending">Sending - </string>
    <string name="chtlstandcntcts_btn_selectall">Select all</string>
    <string name="usrprfl_btn_editprofile">Edit Profile</string>
    <string name="cm_txt_feel">FEEL</string>
    <string name="lgn_txt_email">Email or username</string>
    <string name="vrfyphn_txt_country">Country</string>
    <string name="actvty_txt_someonepostphoto">Someone just shared a new post.</string>
    <string name="sttngs_btn_logout">Log Out</string>
    <string name="edtprfl_txt_sex">Sex</string>
    <string name="sttngs_btn_notificationset">Notification Settings</string>
    <string name="cht_txt_youtookascreenshot">You took a screenshot of chat!(%s)</string>
    <string name="hlp_txt_contact">If you need any help, please contact support&#65312;yeemos.com.</string>
    <string name="edtprfl_txt_phone">Phone</string>
    <string name="addbyaddrss_ttl_addfromaddressbook">Add from Address Book</string>
    <string name="shrs_ttl_shares">Shares</string>
    <string name="prfl_btn_changeavatar">Change Avatar</string>
    <string name="sttngs_btn_saveoriginal">Save Original Photos</string>
    <string name="addbyfb_ttl_addfromfacebook">Add from Facebook</string>
    <string name="intl_txt_shareyourstore">Share your stories
\namong friends, everyone
\nor even for strangers only</string>
    <string name="pblc_btn_unfollow">Unfollow</string>
    <string name="hlp_txt_email">support&#65312;yeemos.com</string>
    <string name="tgfrnd_ttl_tagafriend">Tag a friend</string>
    <string name="nwedtgrp_txt_samegroupexist">The friends you selected have been the same with the existing group \"%s\"</string>
    <string name="pblc_txt_finishingup">Finishing Up</string>
    <string name="pblc_btn_scam">Scam</string>
    <string name="edtpst_txt_month1">JAN</string>
    <string name="pub_txt_whatsnew">There is newer version available now.</string>
    <string name="edtpst_btn_enablelocation">Enable location</string>
    <string name="edtpst_txt_month2">FEB</string>
    <string name="edtpst_txt_month3">MAR</string>
    <string name="edtpst_txt_month4">APR</string>
    <string name="edtpst_txt_month5">MAY</string>
    <string name="sttngs_btn_findpeople">Find People</string>
    <string name="edtpst_txt_month6">JUN</string>
    <string name="edtpst_txt_month7">JUL</string>
    <string name="addbyaddrss_txt_nameornumber">Name or phone number</string>
    <string name="sgninhlp_ttl_resetyourpassword">Reset Your Password</string>
    <string name="edtpst_txt_month8">AUG</string>
    <string name="edtpst_txt_month9">SEP</string>
    <string name="nwedtgrp_txt_samegroupname">The group name already exists. Please re-enter the group name.</string>
    <string name="crt_a_usrnm_ttl_igsignup">Sign Up (Instagram)</string>
    <string name="likd_sttngs_btn_unlink">Unlink</string>
    <string name="edtpst_txt_titletagmentionfriend">tag &#65312;Friend or #places u visit and #topics that interest you</string>
    <string name="rst_psswrd_usngfb_txt_inputtwice">Input new password twice to reset</string>
    <string name="cht_txt_unsaved">Unsaved</string>
    <string name="ntfctn_txt_likes">LIKES</string>
    <string name="chtlstandcntcts_txt_swipeleftortaptochat">TAP or SWIPE left to chat</string>
    <string name="pst_txt_previous">MEMORIES</string>
    <string name="lgn_btn_login">LOGIN</string>
    <string name="sgninhlp_btn_usernameoremail">Username or Email</string>
    <string name="actvty_ttl_activities">Activities</string>
    <string name="pblc_txt_whyreport">Why are you reporting this?</string>
    <string name="pblc_btn_delete">Delete</string>
    <string name="pf_txt_mentionyou">{0} just mentioned you</string>
    <string name="actvty_txt_someonelikeyourphoto">Someone felt your post</string>
    <string name="pub_btn_abuse">Abuse</string>
    <string name="chtlstandcntcts_txt_tap">TAP</string>
    <string name="sgn_up_txt_createusername">Username</string>
    <string name="crt_a_usrnm_ttl_signup">SIGN UP</string>
    <string name="sgn_up_txt_termsofservice">Terms of Services</string>
    <string name="hm_txt_nofeaturepost">No post yet</string>
    <string name="chng_psswrd_txt_passwordnotmatch">Your passwords do not match.</string>
    <string name="fndusr_btn_addbyinstagram">Add by Instagram</string>
    <string name="edtpst_btn_friendonly">Friend Only</string>
    <string name="edtprfl_txt_bio">Bio</string>
    <string name="pub_txt_newversioncontentnormal">There is a newer version available for download in App Store.</string>
    <string name="frndprfl_txt_usernotvalid">This user is not valid.</string>
    <string name="intl_btn_createaccount">Sign up</string>
    <string name="pblc_btn_commercialspam">Commercial Spam</string>
    <string name="pblc_txt_me"> (me)</string>
    <string name="intl_txt_stayanonymous">Stay Anonymous\n...or not, your choice!</string>
    <string name="GB3305109">Couldn\'t load Menu</string>
    <string name="ntfctn_txt_comment">COMMENTS</string>
    <string name="edtpst_txt_setanonymous">Post as ANONYMOUS</string>
    <string name="GB3305107">This post is not valid.</string>
    <string name="chng_psswrd_txt_newpasswordagain">New Password, again</string>
    <string name="pf_txt_typing">{0} is typing...</string>
    <string name="addbyaddrss_txt_invitemessage">Hi, My Yeemos username is %s. Add me as Yeemos friend. www.yeemos.com</string>
    <string name="pblc_txt_postloadfail">Loading post failed. Please check the internet connection and try again.</string>
    <string name="GB3305102">User not found.</string>
    <string name="intl_txt_withemotion">With emotion!</string>
    <string name="edtpst_txt_weekday6">SATURDAY</string>
    <string name="edtpst_txt_weekday7">SUNDAY</string>
    <string name="actvty_txt_threestartfollowingyou">%1$s, %2$s and %3$s started following you.</string>
    <string name="edtpst_txt_weekday1">MONDAY</string>
    <string name="pblc_txt_accountfrozentheme">Account Frozen Notification</string>
    <string name="edtprfl_txt_displayname">Displayname</string>
    <string name="edtpst_txt_weekday4">THURSDAY</string>
    <string name="vrfyphn_ttl_verifyphone">Verify Phone</string>
    <string name="edtpst_txt_weekday5">FRIDAY</string>
    <string name="edtpst_txt_weekday2">TUESDAY</string>
    <string name="abt_us_txt_copyright">Yeemos All Rights Reserved.</string>
    <string name="edtpst_txt_weekday3">WEDNESDAY</string>
    <string name="chsfrnd_txt_group">Group</string>
    <string name="pf_txt_comment">{0} left a comment on your post</string>
    <string name="rst_psswrd_usngfb_ttl_resetpassword">Reset Password</string>
    <string name="edtpst_txt_presstoshare">Ready? Press here to share!</string>
    <string name="pub_txt_newversioncontentandroid">There is a newer version available now. Please update to continue to use.</string>
    <string name="actvty_txt_leftdrawingcomment">%s doodled on your post.</string>
    <string name="lgn_txt_pleaseenteremailorusername">Please enter your username or email</string>
    <string name="chng_psswrd_txt_passwordchangedsuccessful">Your password has been changed successfully.</string>
    <string name="actvty_txt_moreleftdrawingcomment">%1$s ，%2$s and %3$s others doodled on your post.</string>
    <string name="pblc_txt_admin">Adminstrator</string>
    <string name="edtprfl_txt_basicinformation">Basic Information</string>
    <string name="actvty_txt_threeleftcommentonyourphoto">%1$s ， %2$s and %3$s left a comment on your post.</string>
    <string name="likd_sttngs_txt_instagram">Instagram name</string>
    <string name="pblc_btn_yes">Yes</string>
    <string name="chtlstandcntcts_txt_recentchat">RECENT CHAT</string>
    <string name="edtprfl_ttl_privateinformation">PRIVATE INFORMATION</string>
    <string name="vws_ttl_views">View</string>
    <string name="pblc_txt_daysago">%s days ago</string>
    <string name="fndusr_ttl_finduser">Find Users</string>
    <string name="chtlstandcntcts_txt_taptoopen">Tap to open - </string>
    <string name="pblc_btn_no">No</string>
    <string name="pblc_btn_following">Following</string>
    <string name="pblc_btn_next">Next</string>
    <string name="usrprfl_btn_follower">Followers</string>
    <string name="edtprfl_btn_male">Male</string>
    <string name="pblc_txt_editedsuccessful">Edited successful</string>
    <string name="pub_btn_offensive">Offensive</string>
    <string name="fndusr_txt_taptofollow">TAP to follow</string>
    <string name="pub_txt_noreadwrite">In order to continue we need to read/write the internal/external card for your device. Please allow it from system settings.</string>
    <string name="cm_btn_searchfriend">Search Your Friends</string>
    <string name="cmr_txt_yourprofile">Profile, Settings, and Notifications are all here</string>
    <string name="pst_vw_txt_doodleforfun">Doodle for fun!</string>
    <string name="drwngcmmnt_txt_doodleyouwant">Doodle whatever you want!</string>
    <string name="edtpst_txt_24hrsorlastforever">Keep 24 hours or Forever</string>
    <string name="pst_vw_txt_feelthepost">TAP or SWIPE left to view next post</string>
    <string name="pst_vw_txt_selectemotion">HOLD for more Feel Options</string>
    <string name="cm_btn_skip">Skip</string>
    <string name="cm_txt_searchfriend">Welcome to Yeemos!\n\nExpress yourself and let\'s FEEL good to be social~\n\nNow let\'s take a moment to check out which of your friends are using Yeemos and follow them! </string>
    <string name="edtpst_txt_hashtagortag">Add hashtag or tag someone</string>
    <string name="drwngcmmnt_txt_seewhodoodled">See who has doodled!</string>
</resources>